(fs) UnsatisfiedLinkError for sun.nio.fs.UnixCopyFile.bufferedCopy0()

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 20
    • Affects Version/s: None
    • Component/s: core-libs
    • b04
    • generic
    • other

      Name change of UnixCopyFile.bufferCopy0() to UnixCopyFile.bufferedCopy0() in the commit https://github.com/openjdk/jdk/pull/9161/commits/6c7ac10c4a98e0d11cb487dfe816f460f7381002# of the pull request https://github.com/openjdk/jdk/pull/9161 was not propagated to the corresponding C implementation. The error was not caught as there is no platform in the build and test infrastructure for which this branch is encountered.

            Assignee:
            Brian Burkhalter
            Reporter:
            Brian Burkhalter
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: